-simple css change to header to prevent overflow on sides

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,9 @@ footer a:hover {
     background-color: rgb(31, 35, 34);
     padding: 10px;
   }
+  header {
+    font-size: 8px;
+  }
   #quiz-container {
     height: 100%;
     width: 100%;
